<resources>
    <!-- Application Strings -->
    <string name="app_name">Reidit</string>

    <!-- Menus -->
    <string name="menu_hot">Hot</string>
    <string name="menu_new">New</string>
    <string name="menu_rising">Rising</string>
    <string name="menu_controversial">Controversial</string>
    <string name="menu_top">Top</string>

    <!-- Labels -->
    <string name="label_subreddit">r/%s</string>

</resources>
