<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/front_page_type_hot"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_hot"/>

    <item
        android:id="@+id/front_page_type_new"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/menu_new"/>

    <item
        android:id="@+id/front_page_type_rising"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_rising"/>

    <item
        android:id="@+id/front_page_type_controversial"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_controversial"/>

    <item
        android:id="@+id/front_page_type_top"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_top"/>

</menu>
